--- a/src/main/resources/templates/fragments/otherreports/motoristasreport.html
+++ b/src/main/resources/templates/fragments/otherreports/motoristasreport.html
@@ -51,7 +51,7 @@
             dateFormat: 'yy-mm-dd'
         });
         $('#generar').click(function(){
-            $("#formreport").attr('action', '../motoristas/'+ $("#codigo").val().toString());
+            $("#formreport").attr('action', '../motoristas/1');
             $("form#formreport").submit();
             
         });
