--- a/src/main/resources/templates/fragments/otherreports/abogadosreport.html
+++ b/src/main/resources/templates/fragments/otherreports/abogadosreport.html
@@ -52,7 +52,7 @@
             dateFormat: 'yy-mm-dd'
         });
         $('#generar').click(function(){
-            $("#formreport").attr('action', '../pdf/1');
+            $("#formreport").attr('action', '../abogados/1');
             $("form#formreport").submit();
             
         });
