--- a/src/main/resources/templates/fragments/rol/roles.html
+++ b/src/main/resources/templates/fragments/rol/roles.html
@@ -6,9 +6,11 @@
 </head>
 <body>
     <div class="container">
-        e aqui
+     
         <div th:if="${not #lists.isEmpty(roles)}">
-            <h2>Todos los Roles</h2>
+            <img src="/sisadmrh/image/unnamed.png" class="img-responsive" alt="Cinque Terre" width="200" height="200">
+    <p class="text-center" style="font-size: 25px;">Todos los Roles</p>
+           
             <table class="table table-striped">
                 <tr>
                     <th>Codigo</th>
@@ -21,9 +23,9 @@
                     <td th:text="${rol.nombrerol}">Nombre</td>
                     <td th:text="${rol.descripcionrol}">contraseña</td>
                     <td><a th:href="${'./show/' + rol.codigorol}" class="btn btn-default">Mostrar</a></td>
-                    <td><a th:href="${'./edit/' + rol.codigorol}" class="btn btn-default">Edit</a></td>
+                    <td><a th:href="${'./edit/' + rol.codigorol}" class="btn btn-default">Editar</a></td>
                     <!--<td><a th:href="${'./delete/' + rol.codigorol}" class="btn btn-danger">Delete</a></td>-->
-                    <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${rol.codigorol} + '\');'" >Delete</a></td>
+                    <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${rol.codigorol} + '\');'" >Borrar</a></td>
                 </tr>
             </table>
         </div>
