--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -33,7 +33,7 @@
     <br>
 
     <form name='f' th:action="@{/j_spring_security_check}" method='POST'>
-        <h2>Introdusca nombre de usuario y contraseña:</h1>
+        <h2>Introduzca nombre de usuario y contraseña:</h1>
         <div class="inset">
             <p>
             <div th:if="${#request.getParameter('error') == 'true'}"
